--- a/front/material_medico.html
+++ b/front/material_medico.html
@@ -12,6 +12,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/nav_include.js"></script>
+    <script src="js/filters.js"></script>
   
   </head>
   <body onload="includeNavBar(), loadType(2)">
