--- a/front/register_customer.html
+++ b/front/register_customer.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <script src="js/functions.js"></script>
+    <script src="js/mask.js"></script>
     <script src="js/nav_include.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/ajax_register.js"></script>
@@ -71,28 +71,9 @@
               </div>
             </li>
           </ul>
-          <button type="submit" class="btn btn-default color wrap" onclick="postCustomer()">Cadastrar</button>
+          <a href="" class="btn btn-default color wrap floatRight" onclick="postCustomer()">Cadastrar</a>
         </form>
         <p style="color: #808080">Campos marcados com " * " são obrigatórios.</p>
-        <!--
-        //Colocar no btn
-        data-toggle="modal" data-target="#myModal"
-        
-        <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h4 class="modal-title">Dados cadastrados com sucesso!</h4>
-              </div>
-              <div class="modal-body">
-                <a href="index.html" style="color: black">Ir para página inicial</a>
-                <a href="login_customer.html" style="float: right; color: black">Fazer Login</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        -->
-
       </section>
 
       <aside>
