--- a/front/login_customer.html
+++ b/front/login_customer.html
@@ -14,6 +14,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/nav_include.js"></script>
+    <script src="js/cart.js"></script>
+
 
 
   </head>
