--- a/front/product_information.html
+++ b/front/product_information.html
@@ -13,6 +13,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/nav_include.js"></script>
+    <script src="js/cart.js"></script>
+
 
   </head>
   <body onload="getProductId(), includeNavBar()">
@@ -29,8 +31,8 @@
         <a href="#"class="btn btn-default color floatRight" onclick="addToCart()">Adicionar ao carrinho</a><br><br>
       </section>
 
-      <aside>
-        <div>
+      <aside style="float: left;">
+        <div id="privder-infromation" style="padding-left: 5%">
           <h5 id="provider-trade-name"></h5>
           <p id="provider-business-name" class="size"></p>
           <p id="cnpj" class="size"></p>
