--- a/front/register_delivery_address.html
+++ b/front/register_delivery_address.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
-    <script src="js/functions.js"></script>
+    <script src="js/mask.js"></script>
     <script src="js/nav_include.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/ajax_register.js"></script>
