--- a/front/register_provider.html
+++ b/front/register_provider.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="js/functions.js"></script>
+    <script src="js/mask.js"></script>
     <script src="js/nav_include.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/ajax_register.js"></script>
@@ -124,7 +124,7 @@
               </div>
             </li>
           </ul>
-          <button type="submit" class="btn btn-default color wrap" onclick="postProvider()">Cadastrar</button>
+          <a href="" class="btn btn-default color wrap floatRight" onclick="postProvider()">Cadastrar</a>
         </form>
         <p style="color: #808080">Campos marcados com " * " são obrigatórios.</p>
       </section>
