--- a/front/update_provider.html
+++ b/front/update_provider.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-    <script src="js/functions.js"></script>
+    <script src="js/mask.js"></script>
     <script src="js/nav_include.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/ajax_register.js"></script>
