Acertos na caixa de busca nas telas index, medicamentos e material medico.

--- a/front/index.html
+++ b/front/index.html
@@ -56,9 +56,9 @@
       </section>
 
       <aside id="filters" style="flex-wrap: wrap">
-        <ul>
+        <ul style="padding-left: 0px">
           <form id="text-box-for-search">
-          <li>
+          <li style="width: 84%">
             <input id ="search" type="search" class="form-control form-control-lg" placeholder="Digite o nome do produto" name="search">
           </li>
           <li>
