--- a/front/medicamentos.html
+++ b/front/medicamentos.html
@@ -29,9 +29,9 @@
       </section>
 
       <aside id="filters">
-        <ul>
+        <ul style="padding-left: 0px">
           <form id="text-box-for-search">
-          <li>
+          <li style="width: 84%">
             <input id ="search" type="search" class="form-control form-control-lg" placeholder="Digite o nome do produto" name="search">
           </li>
           <li>
